# NemeioKB-ble-firmware

./: .clang-format  .clang-format-ignore  .gitmodules  README.md  buildall.sh  check_code_format.sh  make_package_nrf.sh  readme_SDK.txt  run-sonar.sh  set_version.sh  version.txt
LDLC_BLE_HID_Keyboard/: CMakeLists.txt  LDLC_BLE_HID_Keyboard.eww  gcc_nrf52.ld  main.c
LDLC_BLE_HID_Keyboard/LDLC_Keyboard/s132/config/: sdk_config.h
LDLC_BLE_HID_Keyboard/LDLC_Keyboard/s132/iar/: LDLC_BLE_HID_Keyboard_LDLC_Keyboard_s132.ewd  LDLC_BLE_HID_Keyboard_LDLC_Keyboard_s132.ewp  LDLC_BLE_HID_Keyboard_LDLC_Keyboard_s132.ewt  LDLC_BLE_HID_Keyboard_iar_nRF5x.icf  keywords.txt
LDLC_BLE_HID_Keyboard/src/BLE_HID/: app_ble_hid.c  app_ble_hid.h
LDLC_BLE_HID_Keyboard/src/BLE_NUS/: app_ble_nus.c  app_ble_nus.h
LDLC_BLE_HID_Keyboard/src/Libraries/: app_trace.c  app_trace.h  application_defs.h  ble_device_properties.c  ble_device_properties.h  ble_management.c  ble_management.h  swo_log.c  swo_log.h
LDLC_BLE_HID_Keyboard/src/Libraries/BLEEvent/: ble_event_notification.c  ble_event_notification.h
LDLC_BLE_HID_Keyboard/src/Libraries/DeviceList/: device_list.c  device_list.h
LDLC_BLE_HID_Keyboard/src/Libraries/FactoryReset/: factory_reset.c  factory_reset.h
LDLC_BLE_HID_Keyboard/src/Libraries/Hibernation/: hibernation.h
LDLC_BLE_HID_Keyboard/src/Libraries/LESC/: app_lesc.c  app_lesc.h
LDLC_BLE_HID_Keyboard/src/Libraries/RadioTest/: radio_test.c  radio_test.h  radio_test_modes.c  radio_test_modes.h
LDLC_BLE_HID_Keyboard/src/Libraries/Watchdog/: app_watchdog.c  app_watchdog.h
LDLC_BLE_HID_Keyboard/src/SPI_Protocol/: spi_protocol_app_actions.h  spi_protocol_ble_event.c  spi_protocol_ble_event.h  spi_protocol_ble_hid_advertising.c  spi_protocol_ble_hid_advertising.h  spi_protocol_ble_hid_hibernation.c  spi_protocol_ble_hid_hibernation.h  spi_protocol_ble_hid_input_report.c  spi_protocol_ble_hid_input_report.h  spi_protocol_ble_hid_output_report.c  spi_protocol_ble_hid_output_report.h  spi_protocol_ble_hid_peer_management.c  spi_protocol_ble_hid_peer_management.h  spi_protocol_ble_hid_radio_power.c  spi_protocol_ble_hid_radio_power.h  spi_protocol_ble_hid_report_map.c  spi_protocol_ble_hid_report_map.h  spi_protocol_ble_set_device_name.c  spi_protocol_ble_set_device_name.h  spi_protocol_ble_set_device_properties.c  spi_protocol_ble_set_device_properties.h  spi_protocol_ble_set_mac_address.c  spi_protocol_ble_set_mac_address.h  spi_protocol_dfu_commit_version.c  spi_protocol_dfu_commit_version.h  spi_protocol_factory_reset.c  spi_protocol_factory_reset.h  spi_protocol_get_device_list.c  spi_protocol_get_device_list.h  spi_protocol_get_fw_version.c  spi_protocol_get_fw_version.h  spi_protocol_numeric_comparison.c  spi_protocol_numeric_comparison.h  spi_protocol_pairing_abort.c  spi_protocol_pairing_abort.h  spi_protocol_radio_test.c  spi_protocol_radio_test.h  spi_protocol_serial_data.c  spi_protocol_serial_data.h
POC_BLE/: POC_BLE.eww  main.c
POC_BLE/pca10040/s132/config/: sdk_config.h
POC_BLE/pca10040/s132/iar/: ble_app_hrs_iar_nRF5x.icf  ble_app_hrs_pca10040_s132.ewd  ble_app_hrs_pca10040_s132.ewp
POC_BLE/pca10040/s132/iar/settings/: ble_app_hrs_pca10040_s132.nrf52832_xxaa.cspy.bat  ble_app_hrs_pca10040_s132.nrf52832_xxaa.driver.xcl  ble_app_hrs_pca10040_s132.nrf52832_xxaa.general.xcl
POC_BLE/pca10040/ser_s112_hci/iar/: ble_app_hrs_pca10040_s112_hci.ewd  ble_app_hrs_pca10040_s112_hci.ewp  ble_app_hrs_pca10040_s112_hci.ewt
POC_BLE/pca10040/ser_s132_hci/iar/: ble_app_hrs_pca10040_s132_hci.ewp  ble_app_hrs_pca10040_s132_hci.ewt
POC_BLE/pca10040/ser_s132_spi/config/: sdk_config.h
POC_BLE/pca10040/ser_s132_spi/iar/: ble_app_hrs_pca10040_s132_spi.ewp  ble_app_hrs_pca10040_s132_spi.ewt
POC_BLE/pca10040/ser_s132_spi_5W/config/: sdk_config.h
POC_BLE/pca10040/ser_s132_spi_5W/iar/: ble_app_hrs_pca10040_s132_spi_5W.ewp  ble_app_hrs_pca10040_s132_spi_5W.ewt
POC_BLE/pca10040/ser_s132_uart/config/: sdk_config.h
POC_BLE/pca10040/ser_s132_uart/iar/: ble_app_hrs_pca10040_s132_uart.ewp  ble_app_hrs_pca10040_s132_uart.ewt
POC_BLE/settings/: POC_BLE.wsdt  POC_BLE.wspos  ble_app_hrs.wsdt  ble_app_hrs.wspos
Pipelines/: ble.yaml
Pipelines/Templates/: steps-ble-build.yaml  steps-ble-sonar.yaml
SEGGER/RTT/: SEGGER_RTT.h
SPI_Protocol_Common/: spi_config.h  spi_protocol.c  spi_protocol.h  spi_protocol_common_actions.h  spi_protocol_dfu_cmd.c  spi_protocol_dfu_cmd.h  spi_protocol_get_protocol_version.c  spi_protocol_get_protocol_version.h  spi_protocol_tx.c  spi_protocol_tx.h
binaries/: TAG-V0.2.37-binaries.tar.bz2  TAG-V0.2.43-binaries.tar.bz2
cmake-tools/: flash.in  flash.sh  tools.cmake
doc/SBOM/: sbom_nemeio_nrf52.json
nRF5_SDK/components/ble/ble_advertising/: ble_advertising.c  ble_advertising.h
nRF5_SDK/components/ble/ble_services/ble_nus/: ble_nus.c  ble_nus.h
nRF5_SDK/components/ble/common/: ble_srv_common.c  ble_srv_common.h
nRF5_SDK/components/libraries/bootloader/: nrf_bootloader.c  nrf_bootloader_dfu_timers.c
nRF5_SDK/components/libraries/bootloader/dfu/: nrf_dfu_settings.c  nrf_dfu_types.h  nrf_dfu_validation.c  nrf_dfu_ver_validation.c
nRF5_SDK/components/libraries/slip/: slip.c  slip.h
secure_bootloader/: CMakeLists.txt  main.c  secure_bootloader.eww
secure_bootloader/Libraries/SPI_DFU/: dfu_transport_spi.c  dfu_transport_spi.h  spi_protocol_bootloader_actions.h  spi_protocol_dfu_data.c  spi_protocol_dfu_data.h
secure_bootloader/Libraries/bootloader_custom/dfu/: nrf_dfu_commit_version.h
secure_bootloader/karmeliet_spi/config/: sdk_config.h
secure_bootloader/karmeliet_spi/iar/: secure_bootloader_spi_karmeliet.ewd  secure_bootloader_spi_karmeliet.ewp  secure_bootloader_spi_karmeliet.ewt
secure_bootloader/karmeliet_spi_debug/config/: sdk_config.h
secure_bootloader/karmeliet_spi_debug/iar/: secure_bootloader_spi_karmeliet_debug.ewd  secure_bootloader_spi_karmeliet_debug.ewp  secure_bootloader_spi_karmeliet_debug.ewt
